--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-RUN apk add --no cache curl wget busybox-extras netcat-opnebsd python py-pip
+RUN apk add --no-cache curl wget busybox-extras netcat-opnebsd python py-pip
 RUN pip install awscli
-apk --purge -v del py-pip
+RUN apk --purge -v del py-pip
 CMD tail -f /dev/null
